# foxogram-frontend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
.github/workflows/: deploy.yml  desktop.yml
src/: index.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/Base/: index.ts
src/components/Base/Buttons/: Button.tsx  Buttons.css
src/components/LeftBar/: Sidebar.module.css  Sidebar.tsx
src/components/LeftBar/ChatList/: ChatList.module.css  ChatList.tsx
src/components/LeftBar/SearchBar/: SearchBar.module.css  SearchBar.tsx
src/components/LoadingApp/: LoadingApp.module.css  LoadingApp.tsx
src/components/Modal/: Modal.module.css  Modal.tsx
src/components/RightBar/: ChatWindow.module.css  ChatWindow.tsx
src/gateway/: connectionManager.ts  dispatcher.ts  initWebSocket.ts  messageParser.ts  types.d.ts  webSocketClient.ts
src/gateway/events/: channelEventHandlers.ts  memberEventHandlers.ts  messageEventHandlers.ts
src/hooks/: useThrottle.ts
src/interfaces/: interfaces.ts
src/pages/: _404.tsx
src/pages/Auth/: Login.module.css  Login.tsx  Register.module.css  Register.tsx
src/pages/Home/: index.tsx  style.css
src/services/API/: apiMethods.ts
src/store/: authenticationStore.ts  chatStore.ts
src/store/chat/: apiService.ts  chatStore.ts  constants.ts  index.ts  transforms.ts  websocketService.ts
src/types/: types.d.ts
src/utils/: emoji.ts  logger.ts
(+23 files in other folders)
