[package]
name = "foxogram"
version = "0.1.0"
description = "Foxogram Desktop"
authors = ["FoxoCorp"]
license = "MIT"
repository = "https://github.com/foxocorp/foxogram-frontend"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-log = "2.2.0"
